--- a/diamond.html
+++ b/diamond.html
@@ -906,7 +906,7 @@
               Pure Hearts<sup>TM</sup> by Michael Trio combines the best of
               both worlds, presenting a diamond with a symmetrical
               balance of lights and specifications.</p>
-            <a href="https://www.michaeltrio.com/loose-diamonds/" class="btn btn-blue large-btn " role="button">View
+            <a href="https://www.michaeltrio.com/pure-hearts" class="btn btn-blue large-btn " role="button">View
               Diamonds</a>
           </div>
         </div>
@@ -1070,9 +1070,10 @@
 
             <p class="my-4">Customise your engagement ring and choose
               from our extensive range of ring styles, diamonds, and precious metal of your choice. </p>
-            <a href="https://www.michaeltrio.com/loose-diamonds" class="btn btn-blue large-btn mb-2" role="button">Start
+            <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds" class="btn btn-blue large-btn mb-2"
+              role="button">Start
               with a Diamond </a>
-            <a href="https://www.michaeltrio.com/engagement-rings/solitaire" class="btn btn-blue large-btn "
+            <a href="https://www.michaeltrio.com/engagement-rings/setting" class="btn btn-blue large-btn "
               role="button">Start with a Setting </a>
           </div>
         </div>
