--- a/home.html
+++ b/home.html
@@ -1220,7 +1220,7 @@
             <div class="row ">
 
                 <div class="col-sm-8 col-xs-12">
-                    <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                    <a href="https://www.michaeltrio.com/jewellery/rings/" class="textblack">
                         <div class="bg-orange mb-3">
                             <div>
                                 <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-ring.jpg" alt=""
@@ -1232,7 +1232,7 @@
                     </a>
                 </div>
                 <div class="col-sm-8 col-xs-12">
-                    <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                    <a href="https://www.michaeltrio.com/jewellery/earrings/" class="textblack">
                         <div class="bg-orange mb-3">
                             <div>
                                 <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-earring.jpg" alt=""
@@ -1244,7 +1244,7 @@
                     </a>
                 </div>
                 <div class="col-sm-8 col-xs-12">
-                    <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                    <a href="https://www.michaeltrio.com/jewellery/necklaces/" class="textblack">
                         <div class="bg-orange mb-3">
                             <div>
                                 <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-necklace.jpg" alt=""
@@ -1257,7 +1257,7 @@
                 </div>
 
                 <div class="col-sm-8 col-xs-12">
-                    <a href="https://www.michaeltrio.com/wedding-bands/women/" class="textblack">
+                    <a href="https://www.michaeltrio.com/jewellery/bracelets/" class="textblack">
                         <div class="bg-orange mb-3">
                             <div>
                                 <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-bracelet.jpg" alt=""
